# P.R.I.S.M.

./: .gitignore  README.md  app.py  pyproject.toml
_devlog/: _log_of_changes.md
_sandbox/: File name collector.py  The-F.I.R.-v1.4.1_clean.py  The-F.I.R.-v1.5-beta_clean.py
config/: app_config.py  config_paths_name.toml
core/: app_controller.py  module_api.py  module_loader.py
core/elements/: background_task.py  convert_register_to_list.py  convert_register_to_sum_sn.py  copy_files.py  excel_reader.py  pdf_finder.py  report_collector.py  working_with_folders.py
gui/: main_module.py  main_window.py
gui/elements/: logo_manager.py
modules/: __pattern.py  open_data.py
